# vidlens

./: CONTRIBUTING.md  Dockerfile  README.md  pyproject.toml  setup.sh
configs/: dataset_example.yaml
docs/: quickstart.md  training.md
tests/: test_lenses.py
vidlens/: __init__.py  cli.py  pipeline.py
vidlens/lenses/: __init__.py  base.py  face_detection.py  object_detection.py  pose_estimation.py  scene_classification.py
vidlens/ui/: __init__.py  app.py
vidlens/utils/: __init__.py  highlights.py
